--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
+opencv-python-headless
+opencv-contrib-python-headless
 roboflow
 streamlit
 ultralytics
 matplotlib>=3.2.2
 numpy>=1.18.5
-opencv-python-headless
 Pillow>=7.1.2
 PyYAML>=5.3.1
 requests>=2.23.0
